--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Header Logo</h1>
-    <ul>
-        <li>Header link</li>
-        <li>Header link</li>
-        <li>header link</li>
-    </ul>
+    <h1><div class="Logo">Header Logo</div>
+        <div class="header-links">
+            <ul>
+                <li>Header link</li>
+                <li>Header link</li>
+                <li>header link</li>
+            </ul>
+        </div>
+    </h1>
     <h2>This website is awesome</h2>
     <p>This website has some subtext that goes her under the main title. its smaller font and the color is lower in contrast</p>
     <b>Sign up</b>
-    <a href="images/pexels-photo.jpeg">generic picture</a>
+    <img src="images/pexels-photo.jpeg" alt="Generic pic">
     <h3>Some random info</h3>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+    <ul class="center images">
+        <li> <img src="images/black-cat-1.jpeg" alt=""></li>
+        <li><img src="images/black-cat-2.jpg" alt=""></li>
+        <li><img src="images/black-cat-3.jpeg" alt=""></li>
+        <li><img src="images/black-cat-4.jpeg" alt=""></li>
     </ul>
 </body>
 </html>
