correctly placed the header

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><div class="Logo">Header Logo</div>
-        <div class="header-links">
-            <ul>
+    <h1>
+        <div class="Logo">Header Logo</div>
+            <ul class="header-links">
                 <li>Header link</li>
                 <li>Header link</li>
-                <li>header link</li>
+                <li>Header link</li>
             </ul>
-        </div>
     </h1>
     <h2>This website is awesome</h2>
     <p>This website has some subtext that goes her under the main title. its smaller font and the color is lower in contrast</p>
