placed most of the uper body of the site in place just need to fix the picture

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
                 <li>Header link</li>
             </ul>
     </h1>
-    <h2>This website is awesome</h2>
-    <p>This website has some subtext that goes her under the main title. its smaller font and the color is lower in contrast</p>
-    <b>Sign up</b>
-    <img src="images/pexels-photo.jpeg" alt="Generic pic">
-    <h3>Some random info</h3>
+    <h2>
+        <div class="text">Website is awesome</div>
+        <p>This website has some subtext that goes her under the main title. its smaller font and the color is lower in contrast</p>
+        <b>Sign up</b>
+    </h2>
+        <img src="images/pexels-photo.jpeg" alt="Picture 1" class="picture-1">
+    
+        <h3>Some random info</h3>
     <ul class="center images">
         <li> <img src="images/black-cat-1.jpeg" alt=""></li>
         <li><img src="images/black-cat-2.jpg" alt=""></li>
