Fixed image and still working on h2

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
             </ul>
     </h1>
     <h2>
-        <div class="text">Website is awesome</div>
-        <p>This website has some subtext that goes her under the main title. its smaller font and the color is lower in contrast</p>
-        <b>Sign up</b>
+        <div class="text-container">
+            <div class="large-text">I Love Cats</div>
+            <p class="small-text">This website has some subtext that goes her under the main title. its smaller font and the color is lower in contrast</p>
+            <b class="button">Sign up</b>
+        </div>    
+        <div class="pic-container">
+            <img src="images/pexels-photo.jpeg" alt="Picture 1" class="picture-1">
+        </div> 
     </h2>
-        <img src="images/pexels-photo.jpeg" alt="Picture 1" class="picture-1">
-    
+        
         <h3>Some random info</h3>
     <ul class="center images">
         <li> <img src="images/black-cat-1.jpeg" alt=""></li>
