fixed the possitioning on everything and added backround colors as well as the correct size and color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li>Header link</li>
             </ul>
     </h1>
-    <h2>
+    <h2 class="top">
         <div class="text-container">
             <div class="large-text">I Love Cats</div>
             <p class="small-text">This website has some subtext that goes her under the main title. its smaller font and the color is lower in contrast</p>
@@ -26,12 +26,13 @@
         </div> 
     </h2>
         
-        <h3>Some random info</h3>
-    <ul class="center images">
-        <li> <img src="images/black-cat-1.jpeg" alt=""></li>
-        <li><img src="images/black-cat-2.jpg" alt=""></li>
-        <li><img src="images/black-cat-3.jpeg" alt=""></li>
-        <li><img src="images/black-cat-4.jpeg" alt=""></li>
-    </ul>
+    <h3 class="middle-1">Some random info
+        <ul class="center-images">
+            <li><img src="images/black-cat-1.jpeg" alt=""></li>
+            <li><img src="images/black-cat-2.jpg" alt=""></li>
+            <li><img src="images/black-cat-3.jpeg" alt=""></li>
+            <li><img src="images/black-cat-4.jpeg" alt=""></li>
+        </ul>
+    </h3>
 </body>
 </html>
