--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="first-top">
     <h1>
         <div class="Logo">Header Logo</div>
             <ul class="header-links">
@@ -25,14 +26,20 @@
             <img src="images/pexels-photo.jpeg" alt="Picture 1" class="picture-1">
         </div> 
     </h2>
+</div>
+    <h3 class="middle-1">
         
-    <h3 class="middle-1">Some random info
+        <div class="image-title">Look at these cute cats :3</div>
         <ul class="center-images">
-            <li><img src="images/black-cat-1.jpeg" alt=""></li>
-            <li><img src="images/black-cat-2.jpg" alt=""></li>
-            <li><img src="images/black-cat-3.jpeg" alt=""></li>
-            <li><img src="images/black-cat-4.jpeg" alt=""></li>
+            <li><img src="images/black-cat-1.jpeg" alt="">Cat 1</li>
+            <li><img src="images/black-cat-2.jpg" alt="">Cat 2</li>
+            <li><img src="images/black-cat-3.jpeg" alt="">Cat 3</li>
+            <li><img src="images/black-cat-4.jpeg" alt="">Cat 4</li>
         </ul>
     </h3>
+    <h4 class="middle-2">
+        <p>Inspiring quote</p>
+        <p1>Quote person</p1>
+    </h4>
 </body>
 </html>
