Added everything else and finished the project, not the pritiests but its a start

--- a/index.html
+++ b/index.html
@@ -38,8 +38,17 @@
         </ul>
     </h3>
     <h4 class="middle-2">
-        <p>Inspiring quote</p>
-        <p1>Quote person</p1>
+        <p1>Inspiring quote: this is where a really good quote would go</p1>
+        <p2>-Quote person</p2>
     </h4>
+    <h5 class="footer">
+        <div2>
+            <div1>
+                <p1>Call to action! its time!</p1>
+                <p2>Sign up for out product by clincking the button yay!</p2>
+            </div1>
+                <b>Sign up</b>
+        </div2>
+    </h5>
 </body>
 </html>
